# dataaug-platform

./: README.md  pyproject.toml  requirements.txt  setup.py
dataaug_platform/: __init__.py  dataset.py  ingestion.py  pipeline.py
dataaug_platform/augmentations/: base_augmentation.py  mimicgen.py
examples/: example_usage.py  explore_pytorch.py  mimicgen_square_example.py
src/dataaug_platform/: __init__.py  augmentation.py  ingestion.py  pipeline.py
tests/: test_multiple_runs.py
