[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataaug-platform"
version = "0.1.0"
description = "Data augmentation platform"
requires-python = ">=3.11" # 3.11 for mimicgen?
dependencies = [
    "pyspark==4.0.1",
    "numpy>=2.0.0",
    "h5py>=3.0.0",
]

[project.optional-dependencies]
mimicgen = [
    "mimicgen @ git+https://github.com/NVlabs/mimicgen@v1.0.0",
    "mujoco==3.3.7",
    "torch>=2.7.0",
    "robosuite==1.4.1",
    "robomimic @ git+https://github.com/ARISE-Initiative/robomimic@v0.5",
]
